--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -10,6 +10,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ path('usager_index') }}">{% trans %} default.navbar.usager {% endtrans %}</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ path('boutique') }}">{% trans %} default.navbar.shop {% endtrans %}</a>
                 </li>
                 <li class="nav-item dropdown">
