--- a/templates/boutique/index.html.twig
+++ b/templates/boutique/index.html.twig
@@ -6,7 +6,7 @@
         {% for category in categories %}
            <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img src="{{host ~ category.visuel}}" class="card-img-top" alt="{{category.libelle}}">
+                    <img src="{{category.visuel}}" class="card-img-top" alt="{{category.libelle}}">
                     <div class="card-body">
                         <h5 class="card-title">{{category.libelle}}</h5>
                         <p class="card-text">{{category.texte}}</p>
