Front page d'accueil en cours

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
 {% block title %}{% trans %} default.index.title {% endtrans %}{% endblock %}
 {% block content %}
-    <p>index</p>
+    <h1 class="mx-5 my-5">Page d'accueil</h1>
 {% endblock %}
