--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,7 +1,7 @@
 {% set route = app.request.attributes.get('_route') %}
 {% set params = app.request.attributes.get('_route_params') %}
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="px-4 py-4 navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="{{ path('index') }}">{% trans %} default.navbar.home {% endtrans %}</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,10 +10,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('usager_index') }}">{% trans %} default.navbar.usager {% endtrans %}</a>
+                    <a class="nav-link" href="{{ path('usager_index') }}"><i class="fas fa-user mx-2"></i>{% trans %} default.navbar.usager {% endtrans %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('boutique') }}">{% trans %} default.navbar.shop {% endtrans %}</a>
+                    <a class="nav-link" href="{{ path('boutique') }}"><i class="fas fa-store mx-2"></i>{% trans %} default.navbar.shop {% endtrans %}</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
