Page d'accueil et de contact

--- a/templates/default/contact.html.twig
+++ b/templates/default/contact.html.twig
@@ -1,5 +1,9 @@
 {% extends "base.html.twig" %}
 {% block title %}{% trans %} default.contact.title {% endtrans %}{% endblock %}
 {% block content %}
-    <p>Contact/p>
+  <h1 id="contact-title" class="mx-5 my-5">Contact</h1>
+  <p id="contact-text" class="mx-5 my-3">Pour plus d'informations sur l'UGA, cliquez sur l'image ci-dessous !</p>
+  <a class="contact-image mx-5" href="https://www.univ-grenoble-alpes.fr/" target="_blank">
+    <img src="/images/UGA-logo.jpg" alt="">
+  </a>
 {% endblock %}
