--- a/templates/fragment/panier.html.twig
+++ b/templates/fragment/panier.html.twig
@@ -1,1 +1,1 @@
-<a class="nav-link" href="{{ path('panier.index') }}" tabindex="-1" aria-disabled="true">{% trans %} default.navbar.panier {% endtrans %} {{ quantite }}</a>
+<a class="nav-link" href="{{ path('panier.index') }}" tabindex="-1" aria-disabled="true"><i class="fas fa-shopping-cart mx-2"></i>{% trans %} default.navbar.panier {% endtrans %} {{ quantite }}</a>
