wip: panierToCommande entity issues

--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -4,11 +4,14 @@
     <p>Panier</p>
     <div class="container">
         <div class="row">
-            {% for id, article in panier %}
-            <div class="col-8">id: {{ id }} quantite: {{ article }}</div>
+            {% for id, data in panier %}
+            <div class="col-8">{{ data['entity'].libelle }}, -> quantite: {{ data['nbr'] }}</div>
             <div class="col-2"><a href="{{ path('panier.remove', { "idProduit": id }) }}">R</a></div>
             <div class="col-2"><a href="{{ path('panier.delete', { "idProduit": id }) }}">D</a></div>
             {% endfor %}
+            <div class="col-12">
+                <a href="{{ path('panier.validation') }}">Valider</a>
+            </div>
         </div>
     </div>
 {% endblock %}
