--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,6 +1,8 @@
 {% set route = app.request.attributes.get('_route') %}
 {% set params = app.request.attributes.get('_route_params') %}
-
+{#{% if is_granted('ROLE_ADMIN') %}#}
+{#<p>Administrator</p>#}
+{#{% elseif is_granted('ROLE_USER') %}#}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="{{ path('index') }}">{% trans %} default.navbar.home {% endtrans %}</a>
@@ -9,9 +11,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('usager_index') }}">{% trans %} default.navbar.usager {% endtrans %}</a>
-                </li>
+                {% if app.user and  is_granted('ROLE_ADMIN') %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('usager_index') }}">{% trans %} default.navbar.usager {% endtrans %}</a>
+                    </li>
+                {% endif %}
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('boutique') }}">{% trans %} default.navbar.shop {% endtrans %}</a>
                 </li>
