--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -1,14 +1,21 @@
 {% extends "base.html.twig" %}
 {% block title %}{% trans %} default.panier.title {% endtrans %}{% endblock %}
 {% block content %}
-    <p>Panier</p>
+    <h1 id="cart-title" class="mx-5 my-5">Panier</h1>
     <div class="container">
         <div class="row">
             {% for id, article in panier %}
-            <div class="col-8">id: {{ id }} quantite: {{ article }}</div>
-            <div class="col-2"><a href="{{ path('panier.remove', { "idProduit": id }) }}">R</a></div>
-            <div class="col-2"><a href="{{ path('panier.delete', { "idProduit": id }) }}">D</a></div>
+            <div class="cart">
+              {# <span>{{libelle}}</span> #}
+              <p>Quantite: {{ article }}</p>
+              <span></span>
+              <div class="cart-buttons">
+                <a class="cart-button" href="{{ path('panier.remove', { "idProduit": id }) }}">Remove</a>
+                <a class="cart-button" href="{{ path('panier.delete', { "idProduit": id }) }}">Delete</a>
+              </div>
+            </div>
             {% endfor %}
         </div>
     </div>
+    {# <a class="cart-button" href="{{ path('panier.validation') }}">Valider</a> #}
 {% endblock %}
